Adding a lot of use cases